fix structure in personal-information.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
                     <h4>404 Error Page</h4>
                     <p>Trigger custom 404 page via broken link</p>
                 </a>
+                <a href="/page-does-not-exist.html" class="card" data-testid="broken-link-1">
+                    <h4>🔗 Broken Link Test 1</h4>
+                    <p>Intentionally broken link - triggers real 404 response</p>
+                </a>
+
+                <a href="/another-missing-page.html" class="card" data-testid="broken-link-2">
+                    <h4>🔗 Broken Link Test 2</h4>
+                    <p>Another non-existent route for testing error handling</p>
+                </a>
             </div>
         </section>
     </main>
