--- a/personal-information.html
+++ b/personal-information.html
@@ -45,17 +45,36 @@
                 </ul>
             </div>
 
-            <!-- Skills & Certifications Card -->
+            <!-- Education Card -->
             <div class="card">
-                <h4>Skills & Certifications</h4>
-                <p><strong>Tools:</strong> Meta Ads Manager, Sprinklr, Funnel.io, Supermetrics, SQL, Looker Studio, Jira, Notion</p>
-                <p><strong>Certifications:</strong></p>
+                <h4>Education</h4>
+                <div style="margin-bottom: 1rem;">
+                    <p style="margin-bottom: 0.3rem;"><strong>Philipps-Universität Marburg</strong></p>
+                    <p>North American Studies</p>
+                    <p style="font-size: 0.9rem">Marburg, Germany</p>
+                </div>
+                <div>
+                    <p style="margin-bottom: 0.3rem;"><strong>Taras Shevchenko National University</strong></p>
+                    <p>English Translation</p>
+                    <p style="font-size: 0.9rem">Kyiv, Ukraine</p>
+                </div>
+            </div>
+
+            <!-- Skills Card -->
+            <div class="card">
+                <h4>Skills & Tools</h4>
+                <p><strong>Marketing Tools:</strong> Meta Ads Manager, Sprinklr, Funnel.io, Supermetrics, Looker Studio</p>
+                <p><strong>Technical:</strong> SQL, Jira, Notion</p>
+            </div>
+
+            <!-- Certifications Card -->
+            <div class="card">
+                <h4>Certifications</h4>
                 <ul>
                     <li>Meta Certified Media Buying Professional (10/2023)</li>
                     <li>Meta Certified Media Planning Professional (11/2023)</li>
                     <li>Meta Certified Discovery Commerce Specialist (10/2023)</li>
                 </ul>
-                <p><strong>Education:</strong> Philipps-Universität Marburg (North American Studies), Taras Shevchenko National University (English Translation)</p>
             </div>
 
             <!-- Hobbies Card -->
