adjust personal-information.html

--- a/personal-information.html
+++ b/personal-information.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container header-flex">
-            <h1>QA Practice Site</h1>
+            <h1>Personal Information</h1>
             <div class="header-right">
                 <span class="greeting">Welcome, <strong id="welcome-user">Guest</strong>!</span>
                 <a href="login.html" id="logout-link" class="btn-small" style="display:none;">Logout</a>
