add go back button to the login page

--- a/login.html
+++ b/login.html
@@ -45,6 +45,9 @@
         </ul>
       </div>
     </div>
+    <p style="margin-top:1rem;">
+      <a href="javascript:history.back()" class="btn-secondary">Go Back</a>
+    </p>
   </main>
 
   <script src="js/script.js"></script>
