Update resume content and style-wise

--- a/personal-information.html
+++ b/personal-information.html
@@ -24,25 +24,28 @@
         <section class="hero">
             <h2>Yuliia Plaksytska</h2>
             <p>Paid Social Manager & QA Automation Enthusiast</p>
+            <p>
+        Ukrainian ▪
+        <a href="mailto:yuliiaplaksytska@gmail.com">yuliiaplaksytska@gmail.com</a> ▪
+        <a href="https://www.linkedin.com/in/yuliiaplaksytska/" target="_blank" rel="noreferrer">
+          linkedin.com/in/yuliiaplaksytska
+        </a>
+      </p>
         </section>
+        
 
         <div class="cards">
             <!-- Contact Card -->
-            <div class="card">
-                <h4>Contact Information</h4>
-                <p><strong>Email:</strong>yuliiaplaksytska@gmail.com</p>
-                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yuliiaplaksytska" target="_blank">linkedin.com/in/yuliiaplaksytska</a></p>
-                <p><strong>Languages:</strong> German, English, Ukrainian</p>
-            </div>
 
             <!-- Experience Card -->
             <div class="card">
                 <h4>Professional Experience</h4>
                 <ul>
-                    <li><strong>OMD Germany, Frankfurt</strong> (01/2025 - Present)<br>Executive Paid Social: Strategy development, A/B testing, reporting</li>
-                    <li><strong>Sunlab, Aschaffenburg</strong> (03/2024 - 12/2024)<br>Performance Marketing Manager: Automated campaigns, Meta Ads Manager</li>
-                    <li><strong>Reprise Digital, Frankfurt</strong> (12/2021 - 01/2024)<br>Junior Campaign Manager Paid Social: Planning, optimization, A/B tests</li>
-                    <li><strong>Concentrix, Berlin</strong> (07/2020 - 11/2021)<br>Quality Evaluator: Meta/Instagram ad analysis, coaching</li>
+                    <li><strong>OMD Germany, Frankfurt</strong> (01/2025 - Present)<br>Executive Paid Social</li>
+                    <li><strong>Sunlab, Aschaffenburg</strong> (03/2024 - 12/2024)<br>Performance Marketing Manager</li>
+                    <li><strong>Reprise Digital, Frankfurt</strong> (12/2021 - 01/2024)<br>Junior Campaign Manager Paid Social</li>
+                    <li><strong>Concentrix, Berlin</strong> (07/2020 - 11/2021)<br>Quality Evaluator</li>
+                    <li><strong>Concentrix, Berlin</strong> (02/2019 - 06/2020)<br>Client Services Agent</li>
                 </ul>
             </div>
 
@@ -51,30 +54,43 @@
                 <h4>Education</h4>
                 <div style="margin-bottom: 1rem;">
                     <p style="margin-bottom: 0.3rem;"><strong>Philipps-Universität Marburg</strong></p>
-                    <p>North American Studies</p>
-                    <p style="font-size: 0.9rem">Marburg, Germany</p>
+                    <p>MA in North American Studies</p>
+                    <p style="font-size: 0.9rem"><em>Marburg, Germany</em></p>
                 </div>
                 <div>
                     <p style="margin-bottom: 0.3rem;"><strong>Taras Shevchenko National University</strong></p>
-                    <p>English Translation</p>
-                    <p style="font-size: 0.9rem">Kyiv, Ukraine</p>
+                    <p>BA in English Translation</p>
+                    <p style="font-size: 0.9rem"><em>Kyiv, Ukraine</em></p>
                 </div>
             </div>
 
             <!-- Skills Card -->
             <div class="card">
                 <h4>Skills & Tools</h4>
-                <p><strong>Marketing Tools:</strong> Meta Ads Manager, Sprinklr, Funnel.io, Supermetrics, Looker Studio</p>
-                <p><strong>Technical:</strong> SQL, Jira, Notion</p>
+                <p><strong>Marketing/Reporting Tools:</strong> Sprinklr, Funnel.io, Supermetrics, Looker Studio, SQLlite</p>
+                <p><strong>Project Management Tools:</strong> Asana, Jira, Notion, Monday.com</p>
+                <p><strong>Testing Tools:</strong> Playwright, Postman</p>
             </div>
 
             <!-- Certifications Card -->
             <div class="card">
                 <h4>Certifications</h4>
                 <ul>
-                    <li>Meta Certified Media Buying Professional (10/2023)</li>
+                    <li>ISTQB® Certified Tester Foundation Level (02/2026)</li>
+                    <li>Meta Certified Media Buying Professional (06/2025)</li>
+                    <li>TikTok Certified Media Buying Professional (03/2025)</li>
                     <li>Meta Certified Media Planning Professional (11/2023)</li>
                     <li>Meta Certified Discovery Commerce Specialist (10/2023)</li>
+                </ul>
+            </div>
+
+            <!-- Skills Card -->
+            <div class="card">
+                <h4>Languages</h4>
+                <ul>
+                    <li>Ukrainian (Native)</li>
+                    <li>English (C1)</li>
+                    <li>German (B2)</li>
                 </ul>
             </div>
 
@@ -82,7 +98,7 @@
             <div class="card">
                 <h4>Hobbies & Interests</h4>
                 <ul>
-                    <li>Drum playing</li>
+                    <li>Playing drums</li>
                     <li>The Odin Project (web development learning)</li>
                     <li>Road cycling</li>
                     <li>Jogging</li>
