fix language level indication

--- a/personal-information.html
+++ b/personal-information.html
@@ -90,7 +90,7 @@
                 <ul>
                     <li>Ukrainian (Native)</li>
                     <li>English (C1)</li>
-                    <li>German (B2)</li>
+                    <li>German (C1)</li>
                 </ul>
             </div>
 
