fix style and content-wise personal-information.html

--- a/personal-information.html
+++ b/personal-information.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume - Yuliia Plaksytska | QA Practice Site</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <div class="container header-flex">
-        <div class="header-left">
-      <button class="back-btn" type="button" onclick="history.back()">← Back</button>
-            <h1>Personal Information</h1>
-            <div class="header-right">
-                <span class="greeting">Welcome, <strong id="welcome-user">Guest</strong>!</span>
-                <a href="login.html" id="logout-link" class="btn-small" style="display:none;">Logout</a>
-                <button id="theme-toggle" aria-label="Toggle dark/light mode">Toggle Dark Mode</button>
+            <div class="header-left">
+                <button class="back-btn" type="button" onclick="history.back()">← Back</button>
+                <h1>Personal Information</h1>
+                <div class="header-right">
+                    <span class="greeting">Welcome, <strong id="welcome-user">Guest</strong>!</span>
+                    <a href="login.html" id="logout-link" class="btn-small" style="display:none;">Logout</a>
+                    <button id="theme-toggle" aria-label="Toggle dark/light mode">Toggle Dark Mode</button>
+                </div>
             </div>
-        </div>
     </header>
-    
+
     <main class="container">
         <section class="hero">
             <h2>Yuliia Plaksytska</h2>
             <p>Paid Social Campaign Manager & QA Automation Enthusiast</p>
             <p>
-        Ukrainian ▪
-        <a href="mailto:yuliiaplaksytska@gmail.com">yuliiaplaksytska@gmail.com</a> ▪
-        <a href="https://www.linkedin.com/in/yuliiaplaksytska/" target="_blank" rel="noreferrer">
-          linkedin.com/in/yuliiaplaksytska
-        </a>
-      </p>
+                Ukrainian •
+                <a href="mailto:yuliiaplaksytska@gmail.com">yuliiaplaksytska@gmail.com</a> •
+                <a href="https://www.linkedin.com/in/yuliiaplaksytska/" target="_blank" rel="noreferrer">
+                    linkedin.com/in/yuliiaplaksytska
+                </a>
+            </p>
         </section>
-        
+
 
         <div class="cards">
             <!-- Contact Card -->
@@ -41,25 +43,48 @@
             <div class="card">
                 <h4>Professional Experience</h4>
                 <ul>
-                    <li><strong>OMD Germany, Frankfurt</strong> (01/2025 - Present)<br>Executive Paid Social</li>
-                    <li><strong>Sunlab, Aschaffenburg</strong> (03/2024 - 12/2024)<br>Performance Marketing Manager</li>
-                    <li><strong>Reprise Digital, Frankfurt</strong> (12/2021 - 01/2024)<br>Junior Campaign Manager Paid Social</li>
-                    <li><strong>Concentrix, Berlin</strong> (07/2020 - 11/2021)<br>Quality Evaluator</li>
-                    <li><strong>Concentrix, Berlin</strong> (02/2019 - 06/2020)<br>Client Services Agent</li>
+                    <li>
+                        <strong>Executive Paid Social</strong><br>
+                        <span class="date">(01/2025 - Present)</span><br>
+                        <span class="location">OMD Germany, Frankfurt</span>
+                    </li>
+                    <li>
+                        <strong>Performance Marketing Manager</strong><br>
+                        <span class="date">(03/2024 - 12/2024)</span><br>
+                        <span class="location">Sunlab, Aschaffenburg</span>
+                    </li>
+                    <li>
+                        <strong>Junior Campaign Manager Paid Social</strong><br>
+                        <span class="date">(12/2021 - 01/2024)</span><br>
+                        <span class="location">Reprise Digital, Frankfurt</span>
+                    </li>
+                    <li>
+                        <strong>Quality Evaluator</strong><br>
+                        <span class="date">(07/2020 - 11/2021)</span><br>
+                        <span class="location">Concentrix, Berlin</span>
+                    </li>
+                    <li>
+                        <strong>Client Services Agent</strong><br>
+                        <span class="date">(02/2019 - 06/2020)</span><br>
+                        <span class="location">Concentrix, Berlin</span>
+                    </li>
                 </ul>
             </div>
+
 
             <!-- Education Card -->
             <div class="card">
                 <h4>Education</h4>
                 <div style="margin-bottom: 1rem;">
-                    <p style="margin-bottom: 0.3rem;"><strong>Philipps-Universität Marburg</strong></p>
-                    <p>MA in North American Studies</p>
+                    <p style="margin-bottom: 0.3rem;"><strong>MA in North American Studies</strong></p>
+                    <p>Philipps-Universität Marburg</p>
+                    <span class="date">(10/2014 - 03/2017)</span><br>
                     <p style="font-size: 0.9rem"><em>Marburg, Germany</em></p>
                 </div>
                 <div>
-                    <p style="margin-bottom: 0.3rem;"><strong>Taras Shevchenko National University</strong></p>
-                    <p>BA in English Translation</p>
+                    <p style="margin-bottom: 0.3rem;"><strong>BA in English Translation</strong></p>
+                    <p>Taras Shevchenko National University</p>
+                    <span class="date">(09/2010 - 07/2014)</span><br>
                     <p style="font-size: 0.9rem"><em>Kyiv, Ukraine</em></p>
                 </div>
             </div>
@@ -67,7 +92,8 @@
             <!-- Skills Card -->
             <div class="card">
                 <h4>Skills & Tools</h4>
-                <p><strong>Marketing/Reporting Tools:</strong> Sprinklr, Funnel.io, Supermetrics, Looker Studio, SQLlite</p>
+                <p><strong>Marketing/Reporting Tools:</strong> Sprinklr, Funnel.io, Supermetrics, Looker Studio, SQLlite
+                </p>
                 <p><strong>Project Management Tools:</strong> Asana, Jira, Notion, Monday.com</p>
                 <p><strong>Testing Tools:</strong> Playwright, Postman</p>
             </div>
@@ -76,11 +102,11 @@
             <div class="card">
                 <h4>Certifications</h4>
                 <ul>
-                    <li>ISTQB® Certified Tester Foundation Level (02/2026)</li>
-                    <li>Meta Certified Media Buying Professional (06/2025)</li>
-                    <li>TikTok Certified Media Buying Professional (03/2025)</li>
-                    <li>Meta Certified Media Planning Professional (11/2023)</li>
-                    <li>Meta Certified Discovery Commerce Specialist (10/2023)</li>
+                    <li>ISTQB® Certified Tester Foundation Level <span class="date">(02/2026)</span></li>
+                    <li>Meta Certified Media Buying Professional <span class="date">(06/2025)</span></li>
+                    <li>TikTok Certified Media Buying Professional <span class="date">(03/2025)</span></li>
+                    <li>Meta Certified Media Planning Professional <span class="date">(11/2023)</span></li>
+                    <li>Meta Certified Discovery Commerce Specialist <span class="date">(10/2023)</span></li>
                 </ul>
             </div>
 
@@ -109,4 +135,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
