--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yuliia Plaksytska | QA Automation Practice</title>
-    <link rel="stylesheet" href="css/style.css" /> <!-- Now matches the shared CSS -->
+    <link rel="stylesheet" href="css/style.css" /> 
 </head>
 
 <body>
